2004-03-13  Dean Ferreyra <dferreyra@igc.org>

	PR target/14047
	* config/avr/avr.c (avr_progmem_p): Add "attributes" parameter.
	(avr_insert_attributes): Pass "attributes" to avr_progmem_p.
	* config/avr/avr-protos.h (avr_progmem_p): Change prototype.

2004-03-12  David Edelsohn  <edelsohn@gnu.org>

	* doc/install.texi (*-ibm-aix*): Document assembler and achiver
	fixes required by libstdc++ and update installation instructions
	for libstdc++.a.  Document use of Bash to speed up configuration.

2004-03-12  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* doc/tm.texi (registers) <Values in Registers>: Add
	entry for REGMODE_NATURAL_SIZE.

2004-03-11  Richard Henderson  <rth@redhat.com>

	PR target/14539
	* config/alpha/alpha.h (STACK_BOUNDARY): Set to 128.

2004-03-12  Alan Modra  <amodra@bigpond.net.au>

	* real.c (encode_ibm_extended): Do round low word.

2004-03-11  Richard Henderson  <rth@redhat.com>

	PR middle-end/14477
	* except.c (remove_unreachable_regions): Look thru CALL_PLACEHOLDER.
	
2004-03-11  Richard Sandiford  <rsandifo@redhat.com>

	PR target/14496
	* config/mips/mips.h (UNITS_PER_FPVALUE): Fix value for
	TARGET_SINGLE_FLOAT.

2004-03-11  Kelley Cook  <kcook@gcc.gnu.org>

	PR other/14536
	* configure: Regenerated with autoconf 2.57.
	* config.in: Regenerated with autoheader 2.57.

2004-03-11  Alan Modra  <amodra@bigpond.net.au>

	* config/rs6000/linux64.h (MD_FALLBACK_FRAME_STATE_FOR): Don't
	bump retaddr here.

2004-03-11  Alan Modra  <amodra@bigpond.net.au>

	* config/rs6000/t-linux64 (LIB2FUNCS_EXTRA): Add darwin-ldouble.c.
	(SHLIB_MAPFILES): Add libgcc-ppc64.ver.
	(SHLIB_MKMAP_OPTS): Delete.
	(TARGET_LIBGCC2_CFLAGS): Add -specs.
	(bispecs): Add rule.
	* config/rs6000/libgcc-ppc64.ver: New file.
	* config/rs6000/ppc64-fp.c (__fixtfdi, __floatditf): New functions.
	(__floatdidf, __floatdisf): Optimize multiply.
	(__fixunstfdi): New function.
	* config/rs6000/rs6000.c (rs6000_complex_function_value): Allow for