@@ -1,3 +1,8 @@
+2004-03-13  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/14533
+	* gcc.dg/20040311-2.c: New test.
+
 2004-03-12  Ian Lance Taylor  <ian@wasabisystems.com>
 
 	* gcc.dg/arm-mmx-1.c: Don't look for ldmfd if -mthumb.
