@@ -1,3 +1,9 @@
+2004-03-13  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/14533
+	* config/s390/s390.c (legitimize_pic_address): Don't abort on UNSPEC
+	other than UNSPEC_GOTOFF.
+
 2004-03-13  Dean Ferreyra <dferreyra@igc.org>
 
 	PR target/14047
